# python-calculator

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pylintrc  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: add-division-function.md  add-multiplication-function.md  add-subtraction-function.md
.github/ISSUE_TEMPLATES/: 01_zero_division.md  02_square_root.md  03_zero_division_amend_fixup.md  04_square_root_amend_fixup.md  05_conventional_commits_bug.md  06_conventional_commits_doc.md
.github/workflows/: test-python-package.yaml
pythonmaths/: __init__.py  arithmetic.py  trig.py
src/python_calculator/: add.py
tests/: __init__.py  test_add.py  test_arithmetic.py  test_trig.py
